--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,8 @@ jobs:
       with:
         ruby-version: '3.1.4'  # Specify an exact supported version
 
-    - name: Install dependencies
-      run: |
-        gem install bundler
-        bundle install
+    - name: Install Bundler
+      run: gem install bundler  # Install bundler if needed, but no bundle install
 
     - name: Run Ruby script
       run: |
