--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,10 @@ jobs:
       run: |
         echo "RELEASE_BRANCH=${{ github.event.inputs.branch_name }}" >> $GITHUB_ENV
 
-    - name: Configure Git
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+    # - name: Configure Git
+    #   run: |
+    #     git config --global user.name "GitHub Actions"
+    #     git config --global user.email "actions@github.com"
 
     - name: Create and Push Release Branch
       env:
