added scheduled trigger

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
         description: "Name of the branch to create and push"
         required: true
         default: "feature2"
+  schedule:
+    - cron: "*/5 * * * *"  # Runs every 5 minutes
 
 jobs:
   push-branch:
