--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,12 @@ on:
         description: "Name of the branch to create and push"
         required: true
         default: "feature2"
+        
   schedule:
     - cron: "*/5 * * * *"  # Runs every 5 minutes
+
+env:
+  RELEASE_BRANCH: ${{ github.event.inputs.branch_name || 'feature2' }}
 
 jobs:
   push-branch:
@@ -18,24 +22,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set branch name
-      id: set-branch-name
-      run: |
-        echo "RELEASE_BRANCH=${{ github.event.inputs.branch_name }}" >> $GITHUB_ENV
-
     # - name: Configure Git
     #   run: |
     #     git config --global user.name "GitHub Actions"
     #     git config --global user.email "actions@github.com"
 
     - name: Create and Push Release Branch
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git checkout -b ${{ env.RELEASE_BRANCH }}
-        # git push --set-upstream https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/yeshwanthkhelgi/demo.git ${{ env.RELEASE_BRANCH }}
+        git fetch origin
+        if git rev-parse --verify origin/${{ env.RELEASE_BRANCH }} >/dev/null 2>&1; then
+          echo "Branch ${{ env.RELEASE_BRANCH }} already exists. Skipping creation."
+        else
+          git checkout -b ${{ env.RELEASE_BRANCH }}
+          git push origin ${{ env.RELEASE_BRANCH }}
+        fi
 
-    - name: Self-Delete Workflow
-      uses: fabriziocacicia/self-delete-workflow-action@v0.1.0
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+   
